# nginx-gateway-fabric

./: .gitignore  .gitleaksignore  .goreleaser.yml  .pre-commit-config.yaml  .yamllint.yaml  CHANGELOG.md  Makefile  README.md  go.mod  go.sum  renovate.json
.github/: CHANGELOG_TEMPLATE.md  actionlint.yaml
.github/workflows/: build.yml  cherry-pick.yml  ci.yml  codeql-analysis.yml  conformance.yml  dependency-review.yml  f5-cla.yml  fossa.yml  functional-ipv6-only.yml  functional.yml  gke-ipv6-only.yml  helm.yml  ipv6-only.yml  labeler.yml  lint.yml  longevity-start.yml  longevity-stop.yml  mend.yml  nfr-ipv6-only.yml  nfr.yml  openshift-certification.yml  operator-bundle-pr.yml  production-release.yml  redhat-certification.yml  release-pr.yml  renovate-build.yml  scorecards.yml  stale.yml  update-docker-images.yml  verify-ipv6.yaml
ai-context/: README.md  architecture.md  conventions.md  dependencies.md  development.md  glossary.md  overview.md  repo-structure.md  review-patterns.md  testing.md  workflows.md
apis/v1alpha1/: authenticationfilter_types.go  clientsettingspolicy_types.go  externalloadbalancer_types.go  externalloadbalancers_types.go  generate.go  nginxproxy_types.go  observabilitypolicy_types.go  payloadprocessor_types.go  policy_methods.go  proxysettingspolicy_types.go  ratelimitpolicy_types.go  register.go  shared_types.go  snippetspolicy_types.go  upstreamsettingspolicy_types.go  wafgatewaybindingpolicy_types.go  wafpolicy_types.go  zz_generated.deepcopy.go  zz_generated.policymethods.go
apis/v1alpha2/: generate.go  nginxproxy_types.go  observabilitypolicy_types.go  policy_methods.go  zz_generated.deepcopy.go  zz_generated.policymethods.go
charts/nginx-gateway-fabric/: Chart.yaml  README.md  values.schema.json  values.yaml
cmd/gateway/: commands.go  commands_test.go  endpoint_picker.go  endpoint_picker_test.go  initialize_test.go  main.go  validating_types.go  validation.go  validation_test.go
config/cluster/: kind-cluster-ipv6-only.yaml  kind-cluster.yaml  kind-ipv6-only.yaml
config/crd/: kustomization.yaml
debug/: Dockerfile
deploy/: README.md  crds.yaml
deploy/aws-nlb/: deploy.yaml
deploy/azure/: deploy.yaml
deploy/default/: deploy.yaml
deploy/experimental/: deploy.yaml
deploy/experimental-nginx-plus/: deploy.yaml
deploy/inference/: deploy.yaml
deploy/inference-nginx-plus/: deploy.yaml
deploy/nginx-plus/: deploy.yaml
deploy/nodeport/: deploy.yaml
deploy/openshift/: deploy.yaml
deploy/payload-processor/: deploy.yaml
deploy/snippets/: deploy.yaml
deploy/snippets-filters/: deploy.yaml
deploy/snippets-filters-nginx-plus/: deploy.yaml
deploy/snippets-nginx-plus/: deploy.yaml
dev/: JWT_README.md  convert_pem_to_jwks.sh  generate_jwt.sh
dev/nginx/: Makefile  README.md  nginx.conf  nginx.yaml
dev/rust-nginx-epp/: Cargo.toml  Dockerfile  Makefile  README.md  nginx.conf
dev/rust-nginx-epp/c/: config  ngx_http_rust_epp_module.c
dev/rust-nginx-epp/src/: epp_client.rs  lib.rs
docs/api/: pkg.tpl
docs/developer/: plm-getting-started.md  release-process.md  testing.md
docs/proposals/: authentication-filter.md  client-settings.md  external-auth-filter.md  gateway-inference-extension.md  gateway-link.md  gatewaylink.md  nap-waf.md  oidc.md  proxy-settings.md  rate-limiting.md  session-persistence.md
examples/advanced-routing/: cafe-routes.yaml
examples/basic-authentication/: README.md  basic-auth.yaml  cafe-routes.yaml  cafe.yaml  gateway.yaml
examples/cafe-example/: cafe-routes.yaml  eppinvalidservice.yaml  epprouting.yaml  eppunavailablefailopen.yaml  gateway.yaml  httproutemultiplerules.yaml  inferencepool-resolvedrefs.yaml
examples/client-validation/: README.md  cafe-routes.yaml  default-validation-ca-secret.yaml  gateway.yaml  nginx-secret-default.yaml  nginx-secret-per-port.yaml  per-port-validation-ca-secret.yaml
examples/cors-filter/: README.md  cors-route.yaml
examples/external-authentication/: README.md  cafe-routes.yaml  external-auth.yaml
examples/externalname-service/: gateway.yaml
examples/gatewaylink/: DemoScript.md  README.md  gateway.yaml  nginxproxy-ipam.yaml  nginxproxy-manual-ip.yaml
examples/guardrails/: README.md  guardrails-service.yaml  inference-sim-dataset.json  inference-sim-dataset.sqlite3  llm-route.yaml  payload-processor.yaml  test-data.json
examples/http-request-header-filter/: echo-route.yaml
examples/http-response-header-filter/: headers.yaml  http-route-filters.yaml
examples/https-termination/: README.md  certificate-ns-and-cafe-secret.yaml  gateway.yaml
examples/inference-llm-guardrails/: guardrails-secret.yaml  inference-pool.yaml  llm-route.yaml  llm.yaml  payload-processor.yaml
examples/inference-pool/: gateway.yaml  httproute.yaml
examples/jwt-authentication/: README.md  cafe-routes-file.yaml  cafe-routes-remote.yaml  gateway.yaml  jwt-auth-file.yaml  jwt-auth-remote.yaml
examples/jwt-file-auth/: auth  cafe-routes.yaml  jwt-auth.yaml
examples/listener-set/: longevity-test.yaml
examples/oidc-authentication/: README.md  ca.crl  ca.srl  cafe-routes.yaml  cafe-secret.yaml  cafe.yaml  client-secret.yaml  docker-compose.yaml  gateway.yaml  keycloak.csr  keycloak.yaml  nginx.csr  oidc-auth-filter.yaml  (+1 more)
internal/controller/nginx/modules/rust/ai-guardrails/: Cargo.toml  Dockerfile.testing  README.md  build.rs
internal/controller/nginx/modules/rust/ai-guardrails/src/: client.rs  config.rs  lib.rs  stream.rs
internal/controller/nginx/modules/rust/ngf-inference/: Cargo.toml  Dockerfile.testing
internal/controller/nginx/modules/rust/ngf-inference/.cargo/: config.toml
internal/controller/nginx/modules/rust/ngf-inference/src/: config.rs  grpc.rs  lib.rs  protos.rs  stream.rs
internal/controller/nginx/modules/rust/ngf-inference/src/net/: connection.rs  mod.rs  peer_conn.rs  ssl.rs
operators/: Dockerfile  Makefile  PROJECT  README.md  bundle.Dockerfile
scripts/: build-nap-dev-image.sh  generate-manifests.sh
tests/: Makefile  OPENSHIFT_CONFORMANCE.md  README.md  conformance-profile-inference.yaml  go.mod  go.sum  output.txt
(+749 files in other folders)
