[package]
name = "guardrails_filter"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["F5 AI Guardrails Contributors"]
description = "Rust NGINX module for streaming LLM response inspection with Calypso Guardrails"

[lib]
name = "ai_guardrails"
# cdylib produces the .so for nginx; rlib is needed for `cargo test` to link the test harness
crate-type = ["cdylib", "rlib"]

[dependencies]
ngx = { version = "0.5", features = ["async"] }
nginx-sys = "0.5"
http = "1"
bytes = "1"
paste = "1.0"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# ureq 3.x with a minimal feature set:
#   - rustls-no-provider + _ring: pure-Rust rustls TLS backend (no OpenSSL link).
#   - platform-verifier: use the OS/native trust store (rustls-native-certs) instead
#     of a bundled root-cert crate (webpki-roots), which carries a license the
#     dependency-review policy rejects.
#   - json/gzip: request/response JSON and gzip decode.
# `url`/`cookies` are intentionally NOT enabled: `url` pulls in idna -> the ICU4X
# (Unicode-3.0) stack, which the dependency-review policy rejects. ureq 3.x makes
# `url` optional, so keeping these features off removes ~18 disallowed crates.
ureq = { version = "3", default-features = false, features = [
    "rustls-no-provider",
    "_ring",
    "platform-verifier",
    "json",
    "gzip",
] }
once_cell = "1.21"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
